k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-frontend
  labels:
    app: mi-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mi-frontend
